Worked over pipes and multislices some more, plus random cleanup.
git-svn-id: http://svn.pugscode.org/pugs@23216 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/doc/trunk/design/syn/S03.pod
+++ b/doc/trunk/design/syn/S03.pod
@@ -124,8 +124,8 @@ the object being matched, so C<< 1.5 ~~ 1^..^2 >> is true.
 
 =item * However, C<...> as a term is the "yada, yada, yada" operator,
 which is used as the body in function prototypes.  It complains
-bitterly if it is ever executed.  Actually, it calls "fail".  Variant
-C<???> warns, and C<!!!> dies.
+bitterly if it is ever executed.  Actually, it calls C<fail>.  Variant
+C<???> calls C<warn>, and C<!!!> calls C<die>.
 
 =item * In addition, to the ordinary C<.> method invocation, there are
 variants C<.*>, C<.?>, and C<.+> to control how multiple parent methods
